--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
        <!-- Aside Block: Begin -->
        <div class= "container-fluid">
            <aside class = "media">
+               <div class = "container">
                <div class = "row">
-                       <div class = "media-sources col-md 9 col-md-offset-3">
+                       <div class = "media-sources col-md 12">
                        <span>
                            <img src = "img/seen.jpg" alt = "seen">
                        </span>
@@ -88,6 +89,7 @@
                            <img src = "img/nbc.jpg" alt = "nbc">
                        </a>
                    </div>
+               </div>
                </div>
            </aside>
        </div>
